--- a/css/style.css
+++ b/css/style.css
@@ -1,45 +1,46 @@
-html{
-    box-sizing: border-box;
+html {
+  box-sizing: border-box;
 }
 
 body {
-    margin: 0;
-    font-size: 16px;
-    color: #000000;
-    background-color: rgb(216, 253, 242);
-    height: 100vh;
-    display: flex;
-    flex-direction: column;
+  margin: 0;
+  font-size: 16px;
+  color: #000000;
+  background-color: rgb(197, 253, 255);
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
 }
 
 header {
-    width: 100%;
-    height: 50px;
-    display: flex;
-    background-color: rgb(127, 255, 212);
-    border: solid rgb(26, 179, 140);
-    border-width: 2px 0px;
+  width: 100%;
+  height: 50px;
+  display: flex;
+  background-color: rgb(104, 182, 255);
+  color: rgb(255, 255, 255);
+  border: solid rgb(32, 54, 255);
+  border-width: 2px 0px;
 }
-h1{
-    margin-left: 1rem;
-    height: inherit;
-    font-weight: 300;
-    margin-block-start: 0;
-    margin-block-end: 0;
+h1 {
+  margin-left: 1rem;
+  height: inherit;
+  font-weight: 300;
+  margin-block-start: 0;
+  margin-block-end: 0;
 }
 
 footer {
-    margin-block-start: auto;
-    background-color: aquamarine;
-    border: solid rgb(26, 179, 140);
-    border-width: 1px 0px;
-    width: 100%;
-    height: 30px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+  margin-block-start: auto;
+  background-color: rgb(127, 187, 255);
+  border: solid rgb(26, 97, 179);
+  border-width: 1px 0px;
+  width: 100%;
+  height: 30px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 footer i {
-    font-size: 120%;
+  font-size: 120%;
 }
